--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ionicons": "^7.0.0",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
+    "swiper": "^10.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
